Finish tests in AuthenticationServiceTest
Created all test cases for signup method in AuthenticationServiceTest.java; configured pom.xml to suppress some warnings